Bug 124295 - listbox in Charts Dialog Calc does not show selected text
Summary: listbox in Charts Dialog Calc does not show selected text
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-23 14:23 UTC by shubhamgoyal
Modified: 2021-05-26 04:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
chart 3d listbox (27.08 KB, image/png)
2019-03-23 16:21 UTC, Oliver Brinzing
Details

Note You need to log in before you can comment on or make changes to this bug.
Description shubhamgoyal 2019-03-23 14:23:36 UTC
Description:
The spinBox beside the 3D checkbox, do not show the simple, realistic text when selected.
The problem is in calc -> charts wizard -> Chart type

Steps to Reproduce:
1. Open cal.
2. Insert -> Chart
3. Chart type

Actual Results:
The spinBox does not show the text when some dropdown is selected.

Expected Results:
The spinBox should show the selected text. i.e. Simple or Realistic


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Comment 1 Oliver Brinzing 2019-03-23 16:20:35 UTC
already reproducible with AOO 4.1.5
Comment 2 Oliver Brinzing 2019-03-23 16:21:39 UTC
Created attachment 150233 [details]
chart 3d listbox
Comment 3 QA Administrators 2021-03-23 04:21:22 UTC Comment hidden (obsolete)
Comment 4 Andreas Heinisch 2021-05-16 09:07:04 UTC
Proposed patch:
https://gerrit.libreoffice.org/c/core/+/115671
Comment 5 Commit Notification 2021-05-19 07:32:08 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b238522ca121ca8f863fe4d3394ade088a65ad01

tdf#124295 - Always select a 3D scheme in the chart wizard

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2021-05-26 04:47:45 UTC
Now the text is shown. Thanks for fixing.

Verified in 
Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 42d2b2d55a27f11153ea1713737d93540a19211d
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded