tdf#124295 - Always select a 3D scheme in the chart wizard

Change-Id: Ic0a39b4cb6f7af6fbdd99fc93677a0c2d966234d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115671
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>